--- a/test.html
+++ b/test.html
@@ -1,5 +1,16 @@
 <html>
     <head>
+        <style>
+            h1{
+                color:purple;
+                border:1px solid gray;
+            }
+            p{
+                color:silver;
+                background-color:aqua;
+                font-weight:bold;
+            }
+         </style>
         <title>自己紹介</title>
     </head>
     <body>
